--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="main.css">
-    <title>Filter Tabs</title>
+    <title>Text aria with custom style</title>
 </head>
 <body>
     <main class="home">
